navbar alignment fixed

--- a/client/src/components/navbar/Navbar.scss
+++ b/client/src/components/navbar/Navbar.scss
@@ -50,6 +50,11 @@
 
       &.open {
         display: flex;
+        left: 0;
+
+        @media screen and (max-width: 600px){
+          height: calc(100vh - 93px);
+        }
       }
   
       a:hover {
@@ -84,6 +89,10 @@
 
         &.open{
           display: flex;
+
+          @media screen and (max-width: 600px){
+            
+          }
         }
       }
 
